added restful api method in the weatherforecast controller

--- a/openweather.web.app/openweather.web.app.csproj
+++ b/openweather.web.app/openweather.web.app.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.14" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,10 +26,12 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\products.ts" />
+    <None Remove="ClientApp\src\app\weather.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\products.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\weather.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
